--- a/src/app/styles/reset.scss
+++ b/src/app/styles/reset.scss
@@ -49,6 +49,7 @@ body {
   text-size-adjust: 100%;
   display: flex;
   flex-direction: column;
+  padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
 }
 
 input,
