--- a/src/app/styles/reset.scss
+++ b/src/app/styles/reset.scss
@@ -49,7 +49,8 @@ body {
   text-size-adjust: 100%;
   display: flex;
   flex-direction: column;
-  padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
+  padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom)
+    env(safe-area-inset-left);
 }
 
 input,
