--- a/src/app/styles/reset.scss
+++ b/src/app/styles/reset.scss
@@ -39,6 +39,11 @@ aside {
   display: block;
 }
 
+html {
+  padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom)
+    env(safe-area-inset-left);
+}
+
 html,
 body {
   min-height: 100dvh;
@@ -49,8 +54,6 @@ body {
   text-size-adjust: 100%;
   display: flex;
   flex-direction: column;
-  padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom)
-    env(safe-area-inset-left);
 }
 
 input,
