--- a/src/widgets/Header/header.scss
+++ b/src/widgets/Header/header.scss
@@ -4,5 +4,5 @@
   align-items: center;
   background-color: var(--turquoise-blue);
   height: 50px;
-  padding: 0 25px;
+  padding: env(safe-area-inset-top, 0) 25px 0;
 }
