--- a/src/app/styles/reset.scss
+++ b/src/app/styles/reset.scss
@@ -41,8 +41,7 @@ aside {
 
 html,
 body {
-  position: fixed;
-  min-height: 100dvh;
+  height: 100vh;
   width: 100%;
   margin: 0;
   line-height: 1;
