--- a/src/widgets/Footer/footer.scss
+++ b/src/widgets/Footer/footer.scss
@@ -3,6 +3,6 @@
   justify-content: space-between;
   align-items: center;
   background-color: var(--turquoise-blue);
-  height: 50px;
+  min-height: 50px;
   padding: 0 25px env(safe-area-inset-bottom, 0);
 }
