--- a/src/app/styles/reset.scss
+++ b/src/app/styles/reset.scss
@@ -11,6 +11,7 @@
 *::before,
 *::after {
   box-sizing: border-box;
+  -webkit-tap-highlight-color: rgb(255 255 255 / 0%);
 }
 
 :focus,
@@ -89,7 +90,7 @@ h6 {
 }
 
 #mycar-root {
-  min-height: 100dvh;
+  min-height: 100vh;
 }
 
 select option {
