1 - remove unused code

--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -5,31 +5,31 @@
   // colors
 
   --white: #fff;
-  --natterbox-aqua: #64ccc9;
+  --aqua: #64ccc9;
   --turquoise-blue: #00a9ce;
   --sf-brand-blue: #0b5cab;
-  --natterbox-char-fourth-col: #dee1e2;
   --grey-1: #999;
   --grey-2: #f8f8f8;
   --grey-3: #f4f2f2;
   --grey-4: #eaeaea;
-  --pinkish-grey: #ccc;
-  --pinkish-grey-two: #bfbfbf;
-  --natterbox-grey: #5c6770;
-  --natterbox-grey-rgb: 91, 103, 112;
-  --natterbox-dark-blue-grey: #49535c;
+  --grey-5: #dee1e2;
+  --grey-6: #ccc;
+  --grey-7: #bfbfbf;
+  --grey-8: #5c6770;
+  --grey-9: #49535c;
+  --grey-rgb: 91, 103, 112;
   --input-text-colour: #999;
   --silver: #bec2c6;
-  --sick-green: #b8c62a;
-  --natterbox-green: #c2d210;
+  --green-1: #c2d210;
+  --green-2: #b8c62a;
+  --green-3: #2e844a;
+  --green-4: #04844b;
   --sun-yellow: #ffc72e;
-  --natterbox-orange: #dd8340;
-  --natterbox-orange-2: #e87722;
-  --green: #2e844a;
-  --jungle-green: #04844b;
-  --natterbox-magenta: #b4458d;
-  --natterbox-lighter-red: #f8485e;
-  --natterbox-red: #eb0c28;
+  --orange-1: #dd8340;
+  --orange-2: #e87722;
+  --magenta: #b4458d;
+  --red-1: #f8485e;
+  --red-2: #eb0c28;
   --black: #000;
 
   // font
