--- a/src/shared/ui/Modal/modal.scss
+++ b/src/shared/ui/Modal/modal.scss
@@ -32,7 +32,7 @@
     height: 55px;
     justify-content: center;
     align-items: center;
-    border-bottom: solid 1px var(--pinkish-grey);
+    border-bottom: solid 1px var(--grey-6);
   }
 
   &__title {
