--- a/src/shared/ui/Table/styles/table.scss
+++ b/src/shared/ui/Table/styles/table.scss
@@ -19,7 +19,7 @@
   &__header {
     display: grid;
     width: 100%;
-    color: var(--natterbox-grey);
+    color: var(--grey-8);
     justify-content: space-between;
     font-weight: 500;
     background-color: var(--grey-2);
@@ -28,7 +28,7 @@
   }
 
   &--with-borders {
-    border: 1px solid var(--pinkish-grey);
+    border: 1px solid var(--grey-6);
 
     .table__header {
       border-radius: 0;
@@ -52,8 +52,8 @@
     }
 
     &--with-borders {
-      border-bottom: 1px solid var(--pinkish-grey);
-      border-left: 1px solid var(--pinkish-grey);
+      border-bottom: 1px solid var(--grey-6);
+      border-left: 1px solid var(--grey-6);
 
       &:first-child {
         border-left: 0;
@@ -76,7 +76,7 @@
   }
 
   &__row-content-container {
-    color: var(--natterbox-grey);
+    color: var(--grey-8);
     display: grid;
     width: 100%;
     align-items: center;
@@ -93,7 +93,7 @@
     padding: 0 10px;
 
     &--with-borders {
-      border-left: 1px solid var(--pinkish-grey);
+      border-left: 1px solid var(--grey-6);
 
       &:first-child {
         border-left: 0;
