--- a/src/shared/ui/WordsAndPhrases/styles/words-and-phrases.scss
+++ b/src/shared/ui/WordsAndPhrases/styles/words-and-phrases.scss
@@ -10,7 +10,7 @@
     padding: 10px;
     align-items: start;
     justify-content: center;
-    border: solid 1px var(--pinkish-grey);
+    border: solid 1px var(--grey-6);
     border-radius: 8px;
   }
 
@@ -34,7 +34,7 @@
   }
 
   &__child {
-    border: solid 1px var(--pinkish-grey);
+    border: solid 1px var(--grey-6);
     border-radius: 4px;
     min-width: 30px;
     min-height: 30px;
