--- a/src/app/styles/reset.scss
+++ b/src/app/styles/reset.scss
@@ -4,7 +4,7 @@
   border: 0;
   font-family: var(--public-sans);
   scrollbar-width: thin;
-  color: var(--natterbox-grey);
+  color: var(--grey-8);
 }
 
 *,
@@ -94,7 +94,7 @@ h6 {
 }
 
 select option {
-  color: var(--natterbox-grey);
+  color: var(--grey-8);
 }
 
 select option:first-child {
