--- a/src/shared/ui/Autosuggest/autosuggest.scss
+++ b/src/shared/ui/Autosuggest/autosuggest.scss
@@ -23,7 +23,7 @@
     padding-left: 10px;
 
     &:hover {
-      background-color: var(--natterbox-char-fourth-col);
+      background-color: var(--grey-5);
     }
   }
 
@@ -47,6 +47,6 @@
     align-items: center;
     justify-content: center;
     font-size: 14px;
-    color: var(--natterbox-grey);
+    color: var(--grey-8);
   }
 }
