--- a/src/shared/ui/Card/card.scss
+++ b/src/shared/ui/Card/card.scss
@@ -1,5 +1,5 @@
 .card {
-  background-color: var(--natterbox-char-fourth-col);
+  background-color: var(--grey-5);
   border-radius: 16px;
   padding: 16px;
 
@@ -18,7 +18,7 @@
     padding: 5px;
 
     &--red {
-      background-color: var(--natterbox-lighter-red);
+      background-color: var(--red-1);
     }
 
     &--blue {
@@ -35,7 +35,7 @@
     }
 
     &--red {
-      color: var(--natterbox-lighter-red);
+      color: var(--red-1);
     }
 
     &--blue {
