--- a/src/shared/ui/Label/label.scss
+++ b/src/shared/ui/Label/label.scss
@@ -15,7 +15,7 @@
   }
 
   &__info-text {
-    color: var(--natterbox-grey);
+    color: var(--grey-8);
     font-size: 14px;
     font-weight: 400;
     max-width: 500px;
