--- a/src/shared/ui/Section/section.scss
+++ b/src/shared/ui/Section/section.scss
@@ -1,5 +1,5 @@
 .section {
-  border-bottom: 1px solid var(--pinkish-grey);
+  border-bottom: 1px solid var(--grey-6);
   padding-bottom: 20px;
 
   &--m-bottom {
