--- a/src/widgets/Footer/footer.scss
+++ b/src/widgets/Footer/footer.scss
@@ -15,7 +15,7 @@
     font-size: 15px;
 
     &--active {
-      color: var(--natterbox-aqua);
+      color: var(--aqua);
     }
 
     &--notification {
@@ -26,7 +26,7 @@
         display: block;
         width: 7px;
         height: 7px;
-        background-color: var(--natterbox-red);
+        background-color: var(--red-2);
         border-radius: 50%;
         position: absolute;
         top: 0;
@@ -47,11 +47,11 @@
     }
 
     &--active.footer__icon--stroke {
-      stroke: var(--natterbox-aqua);
+      stroke: var(--aqua);
     }
 
     &--active.footer__icon--fill {
-      fill: var(--natterbox-aqua);
+      fill: var(--aqua);
     }
   }
 }
