--- a/src/shared/ui/Checkbox/checkbox.scss
+++ b/src/shared/ui/Checkbox/checkbox.scss
@@ -37,16 +37,20 @@
     width: 13px;
     background-color: var(--grey-8);
     border-radius: 2px;
-  }
 
-  &__checkmark::after {
-    left: 4px;
-    top: 0;
-    width: 5px;
-    height: 10px;
-    border: solid white;
-    border-width: 0 2px 2px 0;
-    transform: rotate(45deg);
+    &::after {
+      position: absolute;
+      content: '';
+      display: none;
+      left: 4px;
+      top: 0;
+      width: 5px;
+      height: 10px;
+      border: solid white;
+      border-width: 0 2px 2px 0;
+      transform: rotate(45deg);
+      z-index: 1;
+    }
   }
 
   &:hover input ~ .checkbox__checkmark {
@@ -73,6 +77,7 @@
       width: 20px;
       background-color: var(--grey-6);
     }
+
     /* stylelint-enable */
 
     &:hover input ~ .checkbox__checkmark {
@@ -95,6 +100,7 @@
       border: solid var(--grey-8);
       border-width: 0 0.21em 0.21em 0;
     }
+
     /* stylelint-enable */
   }
 
