--- a/src/features/car/car-edit-form/styles/edit-car.scss
+++ b/src/features/car/car-edit-form/styles/edit-car.scss
@@ -1,3 +1,9 @@
 .edit-car {
   font-size: 10px;
+
+  &__three {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 12px;
+  }
 }
