--- a/src/app/styles/reset.scss
+++ b/src/app/styles/reset.scss
@@ -42,7 +42,6 @@ aside {
 
 html,
 body {
-  height: 100vh;
   width: 100%;
   margin: 0;
   line-height: 1;
@@ -50,6 +49,9 @@ body {
   text-size-adjust: 100%;
   display: flex;
   flex-direction: column;
+}
+body{
+  height: 100dvh;
 }
 
 input,
@@ -90,7 +92,7 @@ h6 {
 }
 
 #carmaster-root {
-  min-height: 100vh;
+  min-height: 100dvh;
 }
 
 select option {
