replace dvh with svh

--- a/src/app/styles/reset.scss
+++ b/src/app/styles/reset.scss
@@ -51,7 +51,7 @@ body {
   flex-direction: column;
 }
 body{
-  height: 100dvh;
+  height: 100svh;
 }
 
 input,
@@ -92,7 +92,7 @@ h6 {
 }
 
 #carmaster-root {
-  min-height: 100dvh;
+  height: 100svh;
 }
 
 select option {
