--- a/src/pages/AddCarPage/ui/newCarPage.scss
+++ b/src/pages/AddCarPage/ui/newCarPage.scss
@@ -1,3 +1,9 @@
-.add-car-page {
+.new-car-page {
   font-size: 10px;
+  padding-bottom: calc(env(safe-area-inset-bottom) + 12px);
+
+  &__footer {
+    display: flex;
+    justify-content: flex-end;
+  }
 }
