--- a/src/widgets/Header/header.scss
+++ b/src/widgets/Header/header.scss
@@ -4,8 +4,8 @@
   justify-content: space-between;
   align-items: center;
   background-color: var(--turquoise-blue);
-  min-height: 50px;
-  padding: env(safe-area-inset-top, 0) 10px 0;
+  min-height: calc(50px + env(safe-area-inset-top));
+  padding: env(safe-area-inset-top) 10px 0;
   color: var(--white);
   font-size: 24px;
   text-align: center;
