--- a/src/shared/ui/InputSelect/inputSelect.scss
+++ b/src/shared/ui/InputSelect/inputSelect.scss
@@ -8,9 +8,10 @@
 
 
       &--is-focused {
-        box-shadow: none!important;
-        border: solid 1px var(--grey-6)!important;
+        box-shadow: none !important;
+        border: solid 1px var(--grey-6) !important;
         outline: 1px solid var(--grey-9) !important;
+        caret-color: var(--grey-8) !important;;
       }
     }
 
