--- a/src/pages/NotFoundPage/ui/not-found-page.scss
+++ b/src/pages/NotFoundPage/ui/not-found-page.scss
@@ -3,6 +3,6 @@
   justify-content: center;
   align-items: center;
   font-size: 32px;
-  color: var(--turquoise-blue);
+  color: var(--blue-1);
   margin-top: 50px;
 }
