--- a/src/shared/ui/Card/card.scss
+++ b/src/shared/ui/Card/card.scss
@@ -22,7 +22,7 @@
     }
 
     &--blue {
-      background-color: var(--turquoise-blue);
+      background-color: var(--blue-1);
     }
   }
 
@@ -39,7 +39,7 @@
     }
 
     &--blue {
-      color: var(--turquoise-blue);
+      color: var(--blue-1);
     }
   }
 
