--- a/src/shared/ui/Label/label.scss
+++ b/src/shared/ui/Label/label.scss
@@ -3,7 +3,7 @@
   margin-top: 15px;
   font-size: 14px;
   font-weight: 500;
-  color: var(--turquoise-blue);
+  color: var(--blue-1);
   margin-bottom: 5px;
   white-space: break-spaces;
 
