--- a/src/shared/ui/TimePicker/time-picker.scss
+++ b/src/shared/ui/TimePicker/time-picker.scss
@@ -33,7 +33,7 @@
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
-    color: var(--grey-8);
+    color: var(--grey-4);
     font-family: var(--poppins);
     font-variant-numeric: tabular-nums;
 
@@ -47,7 +47,7 @@
     border-radius: 4px;
 
     &:focus {
-      outline: 1px solid var(--grey-9);
+      outline: 1px solid var(--grey-1);
       margin: 0;
       transition: border 0.1s ease, box-shadow 0.1s ease;
     }
@@ -96,10 +96,10 @@
       font-weight: normal;
       font-size: 14px;
       line-height: 24px;
-      color: var(--grey-8);
+      color: var(--grey-4);
 
       &.active {
-        color: var(--turquoise-blue);
+        color: var(--blue-1);
       }
     }
   }
