--- a/src/widgets/Header/header.scss
+++ b/src/widgets/Header/header.scss
@@ -3,7 +3,7 @@
   grid-template-columns: 25px 1fr 25px;
   justify-content: space-between;
   align-items: center;
-  background-color: var(--turquoise-blue);
+  background-color: var(--blue-1);
   min-height: calc(50px + env(safe-area-inset-top));
   padding: env(safe-area-inset-top) 10px 0;
   color: var(--white);
