--- a/src/app/styles/main.scss
+++ b/src/app/styles/main.scss
@@ -15,7 +15,7 @@
 
 *::-webkit-scrollbar-thumb {
   border-radius: 4px;
-  background-color: var(--input-text-colour);
+  background-color: var(--grey-1);
   box-shadow: 0 0 1px rgb(255 255 255 / 50%);
   padding-left: 20px;
 }
