--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -5,32 +5,21 @@
   // colors
 
   --white: #fff;
-  --aqua: #64ccc9;
-  --turquoise-blue: #00a9ce;
-  --sf-brand-blue: #0b5cab;
   --grey-1: #999;
-  --grey-2: #f8f8f8;
-  --grey-3: #f4f2f2;
-  --grey-4: #eaeaea;
-  --grey-5: #dee1e2;
-  --grey-6: #ccc;
-  --grey-7: #bfbfbf;
-  --grey-8: #5c6770;
-  --grey-9: #49535c;
-  --grey-rgb: 91, 103, 112;
-  --input-text-colour: #999;
-  --silver: #bec2c6;
-  --green-1: #c2d210;
-  --green-2: #b8c62a;
-  --green-3: #2e844a;
-  --green-4: #04844b;
-  --sun-yellow: #ffc72e;
-  --orange-1: #dd8340;
-  --orange-2: #e87722;
-  --magenta: #b4458d;
-  --red-1: #f8485e;
-  --red-2: #eb0c28;
-  --black: #000;
+  --grey-2: #f4f2f2;
+  --grey-3: #5b6770;
+  --grey-4: #ccc;
+  --grey-5: #e6e6e6;
+  --grey-6: #e8e8e8;
+  --blue-1: #1ea2b1;
+  --blue-2: #4267b2;
+  --input-border: #8f9192;
+  --input-border-hover: #39393a;
+  --red-1: #ea1b0a;
+  --red-2: #d51607;
+  --red-3: #b00402;
+  --green: #2e844a;
+  --black: #393939;
 
   // font
   --poppins: 'Poppins', sans-serif;
@@ -38,7 +27,6 @@
   --public-sans: 'Public Sans', sans-serif;
 
   // breakpoints
-
   --sm: '576px';
   --md: '768px';
   --lg: '992px';
@@ -46,7 +34,4 @@
   --xl: '1200px';
   --xxl: '1400px';
   --monitor: '1600px';
-
-
-  // new kit
 }
