--- a/src/shared/ui/Autosuggest/autosuggest.scss
+++ b/src/shared/ui/Autosuggest/autosuggest.scss
@@ -7,7 +7,7 @@
   }
 
   &__suggestion-match {
-    color: var(--turquoise-blue);
+    color: var(--blue-1);
     font-weight: bold;
     background-color: transparent;
   }
@@ -47,6 +47,6 @@
     align-items: center;
     justify-content: center;
     font-size: 14px;
-    color: var(--grey-8);
+    color: var(--grey-6);
   }
 }
