--- a/src/shared/ui/Button/button.scss
+++ b/src/shared/ui/Button/button.scss
@@ -1,51 +1,215 @@
 .button {
-  padding: 0 19px;
-  border-radius: 5px;
-  border: solid 1px var(--grey-6);
-  font-family: var(--poppins);
-  font-size: 14px;
-  color: var(--sf-brand-blue);
   cursor: pointer;
-  text-decoration: none;
-  min-width: fit-content;
-  background: transparent;
-  font-weight: normal;
+  display: inline-flex !important;
+  flex-direction: column;
+  min-height: 48px;
+  max-height: 48px;
+  padding: 0 24px;
+  color: var(--white);
+  position: relative;
+  border: 0;
   user-select: none;
+  text-decoration: none;
+  box-shadow: none !important;
+  font-size: 18px;
+  line-height: 18px;
+  font-weight: 700 !important;
+  background-color: transparent !important;
+  transition: all 0.1s ease;
+  margin: 0 0 24px;
+  min-width: 150px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  vertical-align: middle;
+  border-radius: 0.25rem;
+  overflow: visible;
+  text-transform: uppercase;
+
+  &--no-margin {
+    margin: 0;
+  }
+
+  span {
+    z-index: 3;
+    position: relative;
+    color: var(--white);
+    font-size: 18px;
+    line-height: 18px;
+    font-weight: 700;
+    transition: all 0.1s ease;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-transform: uppercase;
+  }
+
+  &::before,
+  &::after {
+    background-color: var(--red-1);
+    transition: all 0.1s ease;
+    content: '';
+    display: inline-block;
+    position: absolute;
+    z-index: 1;
+  }
+
+  &::before {
+    width: 100%;
+    height: calc(100% - 6px);
+    left: 0;
+    top: 3px;
+    border-radius: 12px / 100%;
+  }
+
+  &::after {
+    width: calc(100% - 10px);
+    height: 100%;
+    left: 5px;
+    top: 0;
+    border-radius: 14px/4px;
+  }
 
   &:disabled {
     cursor: default;
+    opacity: 0.8;
+    filter: blur(0);
   }
 
-  &:hover {
-    background-position: 0;
+  &:not(:disabled) {
+    &:hover {
+      &::before,
+      &::after {
+        background-color: var(--red-2);
+      }
+    }
   }
 
-  &:focus-visible {
-    outline: 1px solid var(--grey-9);
+  &--outline {
+    span {
+      color: var(--red-1);
+    }
+
+    &::before,
+    &::after {
+      background-color: transparent;
+    }
+
+    &::before {
+      box-shadow: -2px 0 0 0 var(--red-1), 2px 0 0 0 var(--red-1);
+      height: calc(100% - 6px);
+      top: 3px;
+      border-radius: 12px / 100%;
+      left: 2px;
+      width: calc(100% - 4px);
+    }
+
+    &::after {
+      box-shadow: 0 -2px 0 0 var(--red-1), 0 2px 0 0 var(--red-1);
+      width: calc(100% - 10px);
+      left: 5px;
+      border-radius: 14px/4px;
+      z-index: 2;
+      height: calc(100% - 3px);
+      top: 1px;
+    }
+
+    &:not(:disabled) {
+      &:hover {
+        &::before,
+        &::after {
+          background-color: var(--red-2);
+        }
+
+        &::before {
+          box-shadow: -2px 0 0 0 var(--red-2), 2px 0 0 0 var(--red-2);
+        }
+
+        &::after {
+          box-shadow: 0 -2px 0 0 var(--red-2), 0 2px 0 0 var(--red-2);
+        }
+
+        span {
+          color: var(--white);
+        }
+      }
+    }
+
+    /* stylelint-disable */
+    &--blue {
+      span {
+        color: var(--blue-2);
+      }
+
+      &::after {
+        box-shadow: 0 -2px 0 0 var(--blue-2), 0 2px 0 0 var(--blue-2);
+      }
+
+      &::before {
+        box-shadow: -2px 0 0 0 var(--blue-2), 2px 0 0 0 var(--blue-2);
+      }
+
+      &:not(:disabled) {
+        &:hover {
+          &::before,
+          &::after {
+            background-color: transparent;
+          }
+
+          &::after {
+            box-shadow: 0 -2px 0 0 var(--blue-2), 0 2px 0 0 var(--blue-2);
+          }
+
+          &::before {
+            box-shadow: -2px 0 0 0 var(--blue-2), 2px 0 0 0 var(--blue-2);
+          }
+
+          span {
+            color: var(--blue-2);
+          }
+        }
+      }
+    }
+
+    &--red {
+      span {
+        color: var(--red-1);
+      }
+
+      &::after {
+        box-shadow: 0 -2px 0 0 var(--red-1), 0 2px 0 0 var(--red-1);
+      }
+
+      &::before {
+        box-shadow: -2px 0 0 0 var(--red-1), 2px 0 0 0 var(--red-1);
+      }
+
+      &:not(:disabled) {
+        &:hover {
+          &::before,
+          &::after {
+            background-color: transparent;
+          }
+
+          &::after {
+            box-shadow: 0 -2px 0 0 var(--red-1), 0 2px 0 0 var(--red-1);
+          }
+
+          &::before {
+            box-shadow: -2px 0 0 0 var(--red-1), 2px 0 0 0 var(--red-1);
+          }
+
+          span {
+            color: var(--red-1);
+          }
+        }
+      }
+    }
   }
 
-  &--blue {
-    background-color: var(--sf-brand-blue);
-    color: var(--white) !important;
-  }
-
-  &--green {
-    background-color: var(--green-1);
-    color: var(--white) !important;
-  }
-
-  &--grey {
-    background-color: var(--grey-6);
-    color: var(--white) !important;
-  }
-
-  &--red {
-    background-color: var(--red-2);
-    color: var(--white) !important;
-  }
-
+  /* stylelint-enable */
   &--disabled {
-    background-color: var(--grey-6);
+    background-color: var(--pinkish-grey);
     color: var(--white);
     cursor: default;
     pointer-events: none;
@@ -63,32 +227,44 @@
     }
   }
 
-  &--normal-size {
-    height: 37px;
-  }
-
-  &--input-size {
-    height: 30px;
-  }
-
   &--empty {
-    color: inherit;
-    padding: 0;
-    margin: 0;
-    border: none;
     outline: none;
-    font-size: inherit;
-    text-align: start;
-    height: initial;
-  }
+    background-color: transparent;
+    min-width: min-content;
+    max-width: max-content;
+    min-height: auto;
+    padding: 0;
 
-  &--link {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-  }
+    /* stylelint-disable */
+    span {
+      font-size: 24px;
+      color: var(--red-1);
+    }
 
-  &--contents {
-    display: contents;
+    /* stylelint-enable */
+
+    border: none;
+
+    &:hover {
+      text-decoration: underline;
+    }
+
+    &::after,
+    &::before {
+      display: none;
+    }
   }
+}
+
+.button-end {
+  display: flex;
+  width: 100%;
+  justify-content: flex-end;
+}
+
+.button-justify {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
 }
