--- a/src/shared/ui/Checkbox/checkbox.scss
+++ b/src/shared/ui/Checkbox/checkbox.scss
@@ -5,7 +5,6 @@
   cursor: pointer;
   user-select: none;
   font-size: 14px;
-  color: var(--grey-8);
   height: 15px;
 
   &--m-left {
@@ -30,12 +29,12 @@
 
   &__checkmark {
     position: absolute;
-    top: 9px;
+    top: 12px;
     left: 0;
     transform: translateY(-50%);
     height: 13px;
     width: 13px;
-    background-color: var(--grey-8);
+    background-color: var(--grey-4);
     border-radius: 2px;
 
     &::after {
@@ -54,50 +53,51 @@
   }
 
   &:hover input ~ .checkbox__checkmark {
-    background-color: var(--grey-8);
+    background-color: var(--red-1);
   }
 
   input:checked ~ .checkbox__checkmark {
-    background-color: var(--grey-8);
+    background-color: var(--red-1);
   }
 
   input:checked ~ .checkbox__checkmark::after {
     display: block;
   }
 
-  &--grey {
+  &--big {
     padding-left: 30px;
     margin: 10px 0;
-    line-height: 20px;
-    height: 20px;
+    line-height: 24px;
+    height: 24px;
 
     /* stylelint-disable */
     &__checkmark {
-      height: 20px;
-      width: 20px;
-      background-color: var(--grey-6);
+      height: 24px;
+      width: 24px;
+      background-color: var(--grey-4);
+      border-radius: 8px;
     }
 
     /* stylelint-enable */
 
     &:hover input ~ .checkbox__checkmark {
-      background-color: var(--grey-6);
+      background-color: var(--grey-4);
     }
 
     input:checked ~ .checkbox__checkmark {
-      background-color: var(--grey-6);
+      background-color: var(--red-1);
     }
 
     /* stylelint-disable */
     &__checkmark::after {
-      content: '';
+      content: "";
       position: absolute;
       display: none;
-      left: 6px;
+      left: 8px;
       top: 1px;
       width: 7px;
-      height: 13px;
-      border: solid var(--grey-8);
+      height: 17px;
+      border: solid var(--white);
       border-width: 0 0.21em 0.21em 0;
     }
 
@@ -106,10 +106,10 @@
 
   &--disabled {
     input:disabled ~ .checkbox__checkmark {
-      background-color: var(--grey-6);
+      background-color: var(--grey-4);
     }
 
-    color: var(--grey-6);
+    color: var(--grey-4);
     cursor: not-allowed;
   }
 }
