--- a/src/shared/ui/Paginator/ui/pagination.scss
+++ b/src/shared/ui/Paginator/ui/pagination.scss
@@ -28,7 +28,7 @@
     height: 28px;
     justify-content: center;
     align-items: center;
-    color: var(--sf-brand-blue);
+    color: var(--blue-1);
     text-decoration: none;
     background-color: var(--white);
     border: solid 1px var(--grey-6);
@@ -38,7 +38,7 @@
 
     &:hover {
       z-index: 2;
-      color: var(--sf-brand-blue);
+      color: var(--blue-1);
       background-color: var(--grey-4);
       border-color: var(--grey-6);
     }
@@ -46,7 +46,7 @@
     &:focus {
       z-index: 3;
       color: var(--white);
-      background-color: var(--turquoise-blue);
+      background-color: var(--blue-1);
       outline: 0;
       box-shadow: 0 0 0 0.25rem rgb(13 110 253 / 25%);
     }
@@ -68,8 +68,8 @@
       .pagination__page-link {
         z-index: 3;
         color: var(--white);
-        background-color: var(--turquoise-blue);
-        border: solid 1px var(--turquoise-blue);
+        background-color: var(--blue-1);
+        border: solid 1px var(--blue-1);
       }
     }
 
