--- a/src/shared/ui/StepSlider/step-slider.scss
+++ b/src/shared/ui/StepSlider/step-slider.scss
@@ -30,7 +30,7 @@
     &::-webkit-slider-thumb {
       appearance: none;
       margin-top: -5px; /* Centers thumb on the track */
-      background-color: var(--turquoise-blue);
+      background-color: var(--blue-1);
       height: 20px;
       width: 20px;
       border-radius: 50%;
@@ -39,7 +39,7 @@
     // Firefox
     &::-moz-range-thumb {
       border: none;
-      background-color: var(--turquoise-blue);
+      background-color: var(--blue-1);
       height: 20px;
       width: 20px;
       border-radius: 50%;
@@ -55,7 +55,7 @@
     display: block;
     height: 2px;
     width: calc(100% - 14px);
-    background-color: var(--silver);
+    background-color: var(--grey-2);
   }
 
   &__dots {
@@ -70,7 +70,7 @@
     display: block;
     width: 10px;
     height: 10px;
-    background-color: var(--silver);
+    background-color: var(--grey-2);
     border-radius: 50%;
   }
 
@@ -110,7 +110,7 @@
     margin-top: 10px;
 
     span {
-      color: var(--turquoise-blue);
+      color: var(--blue-1);
     }
   }
 }
