add lazy loading

--- a/src/pages/AuthPage/ui/authPage.scss
+++ b/src/pages/AuthPage/ui/authPage.scss
@@ -10,10 +10,9 @@
   }
 
   &__image {
-    display: block;
     margin: auto;
-    width: 85px;
-    padding: 20px 0;
+    fill: white;
+    font-size: 150px;
   }
 
   &__form {
@@ -21,5 +20,19 @@
     border-top-left-radius: 12px;
     border-top-right-radius: 12px;
     background-color: var(--white);
+  }
+  &__facebook {
+    position: absolute;
+    left: 15px;
+    color: var(--blue-2);
+  }
+  &__google {
+    position: absolute;
+    left: 15px;
+  }
+  &__forgot {
+    display: flex;
+    align-items: center;
+    font-weight: 700;
   }
 }
