--- a/src/shared/ui/Label/label.scss
+++ b/src/shared/ui/Label/label.scss
@@ -1,9 +1,9 @@
 .label {
   display: inline-block;
   margin-top: 15px;
-  font-size: 14px;
-  font-weight: 500;
-  color: var(--blue-1);
+  font-size: 17px;
+  line-height: 18px;
+  font-weight: 300;
   margin-bottom: 5px;
   white-space: break-spaces;
 
