--- a/src/shared/ui/Input/input.scss
+++ b/src/shared/ui/Input/input.scss
@@ -12,7 +12,11 @@
   caret-color: var(--black);
 
   &__field-group {
-    margin-bottom: 22px;
+    margin-bottom: 25px;
+
+    &--error {
+      margin-bottom: 2px;
+    }
   }
 
   &:hover {
@@ -75,9 +79,9 @@
   }
 
   &__error-message {
-    margin: 7px 0 5px;
+    margin: 2px 0 5px;
     font-size: 16px;
-    line-height: 90%;
+    min-height: 15px;
     color: var(--red-3);
     display: flex;
     align-items: center;
@@ -111,7 +115,8 @@
         display: block;
         position: absolute;
         background-color: var(--white);
-        width: 100%;
+        width: calc(100% + 6px);
+        left: -3px;
         height: 4px;
         margin-top: 0;
         top: 7px;
