--- a/src/shared/ui/Modal/modal.scss
+++ b/src/shared/ui/Modal/modal.scss
@@ -11,9 +11,9 @@
   justify-content: center;
 
   &__container {
-    width: 100%;
+    width: calc(100% - 24px);
     max-width: 800px;
-    height: calc(100svh - 10px);
+    max-height: calc(100svh - 10px);
     background-color: var(--white);
     border-radius: 12px;
     animation-name: animatetop;
@@ -46,13 +46,13 @@
   }
 
   &__footer {
-    background-color: var(--grey-3);
+    background-color: var(--grey-2);
     padding: 13px 20px;
     display: flex;
     width: 100%;
     align-items: center;
     justify-content: space-between;
-    border-top: 3px solid var(--grey-4);
+    border-top: 3px solid var(--grey-5);
   }
 }
 
