--- a/src/app/styles/main.scss
+++ b/src/app/styles/main.scss
@@ -28,3 +28,10 @@
   text-align: center;
   margin: 15px;
 }
+
+.loading-page {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: var(--grey-2);
+}
