--- a/src/shared/ui/Modal/modal.scss
+++ b/src/shared/ui/Modal/modal.scss
@@ -1,29 +1,37 @@
 .modal {
   position: fixed;
-  left: 0;
-  top: 0;
-  z-index: 10;
-  width: 100%;
-  min-height: 100%;
-  background-color: rgb(91 103 112 / 28%);
+  inset: 0;
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 10;
 
-  &__container {
+  &__content {
+    position: relative;
     width: calc(100% - 24px);
     max-width: 800px;
     max-height: calc(100svh - 10px);
     background-color: var(--white);
-    border-radius: 12px;
-    animation-name: animatetop;
-    animation-duration: 0.4s;
+    box-shadow: 0 3px 6px #00000029;
     overflow: auto;
+    border-radius: 12px;
+    z-index: 12;
 
     &--confirm {
       text-align: center;
       max-width: 500px;
     }
+  }
+
+  &__close-icon {
+    position: absolute;
+    top: 8px;
+    left: 8px;
+    z-index: 12;
+    box-sizing: content-box;
+    background-color: var(--white);
+    border-radius: 50%;
+    padding: 3px;
   }
 
   &__header {
@@ -56,22 +64,49 @@
   }
 }
 
-@keyframes animatetop {
-  from {
+.modal-anim-enter {
+  .overlay {
     opacity: 0;
   }
 
-  to {
+  .modal__content {
+    opacity: 0;
+    transform: scale(0.5);
+  }
+}
+
+.modal-anim-enter-active {
+  .overlay {
+    opacity: 1;
+    transition: all 0.2s;
+  }
+
+  .modal__content {
+    opacity: 1;
+    transform: translateX(0);
+    transition: all 0.2s;
+  }
+}
+
+.modal-anim-exit {
+  .overlay {
+    opacity: 1;
+  }
+
+  .modal__content {
     opacity: 1;
   }
 }
 
-@keyframes animatetop {
-  from {
+.modal-anim-exit-active {
+  .overlay {
     opacity: 0;
+    transition: all 0.2s;
   }
 
-  to {
-    opacity: 1;
+  .modal__content {
+    opacity: 0;
+    transform: scale(0.5);
+    transition: all 0.2s;
   }
 }
