--- a/src/shared/ui/FileInput/file-input.scss
+++ b/src/shared/ui/FileInput/file-input.scss
@@ -43,6 +43,12 @@
     object-fit: cover;
   }
 
+  &__file-modal {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+
   &__files {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -62,7 +68,7 @@
     left: 5px;
 
     svg {
-      font-size: 16px;
+      font-size: 32px;
       padding: 5px;
       color: black;
       background: white;
