--- a/src/shared/ui/Modal/modal.scss
+++ b/src/shared/ui/Modal/modal.scss
@@ -31,7 +31,9 @@
     box-sizing: content-box;
     background-color: var(--white);
     border-radius: 50%;
-    padding: 3px;
+    font-size: 32px;
+    padding: 5px;
+    color: black;
   }
 
   &__header {
