--- a/src/features/vehicle/vehicleEditForm/styles/edit-vehicle.scss
+++ b/src/features/vehicle/vehicleEditForm/styles/edit-vehicle.scss
@@ -1,9 +1,9 @@
 .edit-vehicle {
   font-size: 10px;
 
-  &__three {
+  &__two {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     gap: 12px;
   }
 }
