edit vehicle page

--- a/src/pages/VehiclePage/ui/vehiclePage.scss
+++ b/src/pages/VehiclePage/ui/vehiclePage.scss
@@ -24,4 +24,18 @@
     margin-top: 10px;
     color: var(--grey-3);
   }
+
+  &__details {
+    margin-top: 16px;
+  }
+
+  &__details-row {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-content: space-between;
+
+    & > *:nth-child(3) {
+      text-align: right;
+    }
+  }
 }
