--- a/src/pages/VehiclePage/ui/vehiclePage.scss
+++ b/src/pages/VehiclePage/ui/vehiclePage.scss
@@ -18,6 +18,15 @@
 
   &__number {
     text-transform: uppercase;
+    display: flex;
+    align-items: center;
+  }
+
+  &__edit-icon {
+    border-radius: 4px;
+    margin-left: 8px;
+    font-size: 24px;
+    color: black;
   }
 
   &__model {
@@ -36,6 +45,9 @@
 
     & > *:nth-child(3) {
       text-align: right;
+    }
+    & > *:nth-child(2) {
+      text-align: center;
     }
   }
 }
