--- a/src/app/styles/app.scss
+++ b/src/app/styles/app.scss
@@ -9,5 +9,7 @@
     column-gap: 15px;
     background-color: var(--grey-2);
     padding: 0 12px;
+    max-width: 600px;
+    margin: 0 auto;
   }
 }
