--- a/src/pages/EditVehiclePage/ui/editVehiclePage.scss
+++ b/src/pages/EditVehiclePage/ui/editVehiclePage.scss
@@ -2,4 +2,8 @@
   padding-top: 12px;
   padding-bottom: calc(env(safe-area-inset-bottom) + 12px);
 
+  &__footer {
+    display: flex;
+    justify-content: flex-end;
+  }
 }
