--- a/src/shared/ui/FileInput/file-input.scss
+++ b/src/shared/ui/FileInput/file-input.scss
@@ -12,6 +12,7 @@
   &--error {
     border: solid 2px var(--red-3);
     box-shadow: 0 0 0 1px var(--red-3);
+    margin-bottom: 2px;
   }
 
   &.input__field-group.file-input--no-margin {
@@ -31,6 +32,10 @@
 
   &__container {
     margin-bottom: 25px;
+
+    &--no-margin {
+      margin-bottom: 2px;
+    }
   }
 
   &__icon {
