--- a/src/app/styles/skeleton.scss
+++ b/src/app/styles/skeleton.scss
@@ -13,7 +13,6 @@
 
   background-color: var(--base-color);
   width: 100%;
-  border-radius: 0.25rem;
   display: inline-flex;
   line-height: 1;
   position: relative;
@@ -30,10 +29,10 @@
     height: 100%;
     background-repeat: no-repeat;
     background-image: linear-gradient(
-      90deg,
-      var(--base-color),
-      var(--highlight-color),
-      var(--base-color)
+                    90deg,
+                    var(--base-color),
+                    var(--highlight-color),
+                    var(--base-color)
     );
     transform: translateX(-100%);
     animation-name: react-loading-skeleton;
@@ -43,10 +42,8 @@
     animation-iteration-count: infinite;
   }
 
-  &--panel {
-    margin-top: 12px;
-    border-radius: 16px;
-  }
+  margin-top: 12px;
+  border-radius: 16px;
 
   &--small-text {
     width: 70px;
@@ -56,5 +53,10 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 12px;
+  }
+
+  &__padding-h {
+    padding-left: 12px;
+    padding-right: 12px;
   }
 }
