--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -10,9 +10,10 @@
   --grey-3: #5b6770;
   --grey-4: #ccc;
   --grey-5: #e6e6e6;
-  --grey-6: #e8e8e8;
+  --grey-6: #aeafb4;
   --blue-1: #1ea2b1;
   --blue-2: #4267b2;
+  --blue-3: #dcdde3;
   --input-border: #8f9192;
   --input-border-hover: #39393a;
   --red-1: #ea1b0a;
