--- a/src/pages/GaragePage/ui/garagePage.scss
+++ b/src/pages/GaragePage/ui/garagePage.scss
@@ -1,5 +1,5 @@
 .garage-page {
-  padding: calc(env(safe-area-inset-top) + 12px) 0 12px 0;
+  padding: calc(env(safe-area-inset-top) + 12px) 12px 12px 12px;
   display: flex;
   width: 100%;
   flex-direction: column;
