--- a/src/pages/VehiclePage/ui/vehiclePage.scss
+++ b/src/pages/VehiclePage/ui/vehiclePage.scss
@@ -9,6 +9,8 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
+    padding: 0 12px;
+
   }
 
   &__title {
@@ -36,6 +38,8 @@
 
   &__details {
     margin-top: 16px;
+    padding: 0 12px;
+
   }
 
   &__details-row {
