--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -7,7 +7,7 @@
   --white: #fff;
   --grey-1: #999;
   --grey-2: #f4f2f2;
-  --grey-3: #5b6770;
+  --grey-3: #a1a1a1;
   --grey-4: #ccc;
   --grey-5: #e6e6e6;
   --grey-6: #aeafb4;
@@ -20,12 +20,11 @@
   --red-2: #d51607;
   --red-3: #b00402;
   --green: #2e844a;
-  --black: #393939;
+  --black: #000000d9;
 
   // font
-  --poppins: 'Poppins', sans-serif;
-  --inter: 'Inter', sans-serif;
-  --public-sans: 'Public Sans', sans-serif;
+  --poppins: 'Poppins', 'sans-serif';
+  --inter: 'Inter', 'sans-serif';
 
   // breakpoints
   --sm: '576px';
