--- a/src/features/vehicleDocumentsList/styles/vehicleDocumentsList.scss
+++ b/src/features/vehicleDocumentsList/styles/vehicleDocumentsList.scss
@@ -1,4 +1,7 @@
 .vehicle-documents-list {
+  display: flex;
+  flex-direction: column;
+
   &__types {
     display: flex;
     gap: 6px;
@@ -53,7 +56,7 @@
   }
 
   &__name {
-
+    font-weight: 500;
   }
 
   &__date {
@@ -64,6 +67,24 @@
 
   &__arrow-icon {
     margin-left: auto;
+  }
+
+  &__add-btn {
+    color: var(--blue-1);
+    font-size: 16px;
+    text-transform: capitalize;
+    display: block;
+
+    &:hover {
+      text-decoration: none;
+    }
+
+    font-weight: 500;
+    padding: 4px 8px;
+    border-radius: 50px;
+    border: 1px solid var(--blue-1);
+    margin-top: 8px;
+    margin-left: 12px;
   }
 
 }
