--- a/src/shared/ui/Button/button.scss
+++ b/src/shared/ui/Button/button.scss
@@ -13,7 +13,7 @@
   box-shadow: none !important;
   font-size: 18px;
   line-height: 18px;
-  font-weight: 700 !important;
+  font-weight: 700;
   background-color: transparent !important;
   transition: all 0.1s ease;
   min-width: 150px;
@@ -44,15 +44,11 @@
   span {
     z-index: 3;
     position: relative;
-    color: var(--white);
-    font-size: 18px;
-    line-height: 18px;
-    font-weight: 700;
+    color: inherit;
     transition: all 0.1s ease;
     display: flex;
     justify-content: center;
     align-items: center;
-    text-transform: uppercase;
   }
 
   &::before,
@@ -239,14 +235,6 @@
     max-width: max-content;
     min-height: auto;
     padding: 0;
-
-    /* stylelint-disable */
-    span {
-      font-size: 24px;
-    }
-
-    /* stylelint-enable */
-
     border: none;
 
     &:hover {
