--- a/src/widgets/Footer/footer.scss
+++ b/src/widgets/Footer/footer.scss
@@ -13,6 +13,7 @@
     align-items: center;
     color: var(--grey-1);
     font-size: 15px;
+    font-weight: 500;
 
     &--active {
       color: var(--red-1);
