--- a/src/pages/AddVehicleDocumentPage/ui/addVehicleDocumentPage.scss
+++ b/src/pages/AddVehicleDocumentPage/ui/addVehicleDocumentPage.scss
@@ -1,9 +1,10 @@
-.edit-vehicle-page {
+.add-vehicle-document-page {
+  font-size: 10px;
   padding-bottom: calc(env(safe-area-inset-bottom) + 12px);
 
   &__footer {
     display: flex;
     justify-content: flex-end;
-    padding: 0 12px;
+    padding:  0 12px;
   }
 }
