--- a/src/pages/NotFoundPage/ui/not-found-page.scss
+++ b/src/pages/NotFoundPage/ui/not-found-page.scss
@@ -1,5 +1,6 @@
 .not-found-page {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   font-size: 32px;
