--- a/src/features/vehicleDocumentsList/styles/vehicleDocumentsList.scss
+++ b/src/features/vehicleDocumentsList/styles/vehicleDocumentsList.scss
@@ -43,6 +43,8 @@
     border-bottom: 1px solid var(--blue-3);
     font-size: 16px;
     font-weight: 500;
+    color: var(--black);
+
   }
 
   &__info-icon {
