--- a/src/shared/ui/File/file.scss
+++ b/src/shared/ui/File/file.scss
@@ -1,8 +1,13 @@
 .file {
   &__too-large {
-    font-size: 36px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     text-align: center;
-    padding: 36px 8px;
+    font-size: 12px;
+    width: 100%;
+    height: 100%;
     border: 1px solid var(--black);
   }
 }
