create new stories

--- a/src/pages/NotFoundPage/ui/not-found-page.scss
+++ b/src/pages/NotFoundPage/ui/not-found-page.scss
@@ -3,7 +3,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-size: 32px;
+  font-size: 28px;
   color: var(--blue-1);
   margin-top: 50px;
+  gap: 25px;
+  padding: 8px;
+  text-align: center;
 }
