--- a/src/app/styles/reset.scss
+++ b/src/app/styles/reset.scss
@@ -40,7 +40,7 @@ aside {
 
 html,
 body {
-  height: 100svh;
+  min-height: 100svh;
   width: 100%;
   margin: 0;
   line-height: 1;
@@ -90,7 +90,7 @@ h6 {
 }
 
 #carmaster-root {
-  height: 100svh;
+  min-height: 100svh;
 }
 
 select option {
