--- a/src/widgets/ErrorPage/ui/errorPage.scss
+++ b/src/widgets/ErrorPage/ui/errorPage.scss
@@ -1,6 +1,6 @@
 .error-page {
   width: 100%;
-  height: 100svh;
+  min-height: 100svh;
   display: flex;
   align-items: center;
   justify-content: center;
