--- a/src/widgets/Footer/footer.scss
+++ b/src/widgets/Footer/footer.scss
@@ -1,10 +1,79 @@
 .footer {
+  position: fixed;
+  top: var(--header-height);
+  width: 100px;
+  z-index: 4;
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
   background-color: var(--white);
   min-height: 75px;
-  padding: 10px 25px env(safe-area-inset-bottom, 0) 25px;
+  box-shadow: 0 2px 4px rgb(3 46 232 / 12%);
+  padding: 16px;
+  border-bottom-left-radius: 8px;
+  right: -100px;
+  transition: all 0.3s ease;
+  gap: 16px;
+
+  &--active {
+    right: 0;
+
+  }
+
+  &__burger-btn {
+    span {
+      height: 18px;
+      width: 50px;
+      position: relative;
+      display: flex;
+      align-items: center;
+      cursor: pointer;
+      background: none;
+      border: 0;
+      text-align: center;
+      outline: none;
+      color: transparent;
+
+      div,
+      &::after,
+      &::before {
+        content: '';
+        position: absolute;
+        width: 25px;
+        height: 2px;
+        background-color: var(--white);
+        transition: all 0.3s ease;
+        border-radius: 4px;
+      }
+
+      &::before {
+        top: 0;
+      }
+
+      &::after {
+        bottom: 0;
+      }
+    }
+
+    &--active {
+      span {
+        div {
+          opacity: 0;
+        }
+
+        &::before {
+          transform: rotate(-45deg) translate3d(0, -50%, 0);
+          top: 50%;
+        }
+
+        &::after {
+          transform: rotate(45deg) translate3d(0, 50%, 0);
+          bottom: 50%;
+        }
+      }
+    }
+  }
 
   &__item {
     display: flex;
