--- a/src/widgets/Header/header.scss
+++ b/src/widgets/Header/header.scss
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   background-color: var(--blue-1);
-  min-height: calc(50px + env(safe-area-inset-top));
+  height: var(--header-height);
   padding: env(safe-area-inset-top) 10px 0;
   color: var(--white);
   font-size: 24px;
@@ -18,7 +18,7 @@
     color: inherit;
   }
 
-  svg {
+  &__back-icon {
     fill: var(--white);
   }
 }
